--- a/web_version/index.html
+++ b/web_version/index.html
@@ -67,6 +67,17 @@
                         <button id="synthwaveBtn">Synthwave</button>
                         <button id="scanlineBtn">Scanlines</button>
                         <button id="matrixBtn">Matrix</button>
+                        <button id="rainbowBtn">Rainbow</button>
+                        <button id="vintageBtn">Vintage</button>
+                        <button id="cyberpunkBtn">Cyberpunk</button>
+                        <button id="vaporwaveBtn">Vaporwave</button>
+                        <button id="hologramBtn">Hologram</button>
+                        <button id="retroBtn">Retro</button>
+                        <button id="noiseBtn">Noise</button>
+                        <button id="duotoneBtn">Duotone</button>
+                        <button id="outrunBtn">Outrun</button>
+                        <button id="acidBtn">Acid</button>
+                        
                     </div>
                 </div>
             </div>
