--- a/web_version/index.html
+++ b/web_version/index.html
@@ -77,7 +77,40 @@
                         <button id="duotoneBtn">Duotone</button>
                         <button id="outrunBtn">Outrun</button>
                         <button id="acidBtn">Acid</button>
-                        
+                        <button id="oilpaintBtn">Oil Paint</button>
+                        <button id="comicBtn">Comic</button>
+                        <button id="nightvisionBtn">Night Vision</button>
+                        <button id="bitwiseBtn">Bitwise</button>
+                        <button id="vhsBtn">VHS</button>
+                        <button id="seventyBtn">70s</button>
+                        <button id="posterizeBtn">Posterize</button>
+                        <button id="polaroidBtn">Polaroid</button>
+                        <button id="technoBtn">Techno</button>
+                        <button id="infraredBtn">Infrared</button>
+                        <button id="mirrorBtn">Mirror</button>
+                        <button id="watercolorBtn">Watercolor</button>
+                        <button id="blueprintBtn">Blueprint</button>
+                        <button id="pixelsortBtn">Pixel Sort</button>
+                        <button id="chromographBtn">Chromograph</button>
+                        <button id="anaglyph3dBtn">3D Anaglyph</button>
+                        <button id="mosaicBtn">Mosaic</button>
+                        <button id="printBtn">Print</button>
+                        <button id="heatmapBtn" >Heatmap</button>
+                        <button id="stainedglassBtn" >Stained Glass</button>
+                        <button id="etchingBtn" >Etching</button>
+                        <button id="plasticBtn" >Plastic</button>
+                        <button id="aquariumBtn" >Aquarium</button>
+                        <button id="parchmentBtn" >Parchment</button>
+                        <button id="frostedglassBtn" >Frosted Glass</button>
+                        <button id="cosmicBtn" >Cosmic</button>
+                        <button id="paintbynumbersBtn" >Paint by Numbers</button>
+                        <button id="metallicBtn" >Metallic</button>
+                        <button id="gothicBtn" >Gothic</button>
+                        <button id="lithographBtn" >Lithograph</button>
+                        <button id="stencilBtn" >Stencil</button>
+                        <button id="chalkboardBtn" >Chalkboard</button>
+                        <button id="impastoBtn" >Impasto</button>
+                    
                     </div>
                 </div>
             </div>
